--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="/css/output.css">
     <title>{{title}}</title>
 </head>
 <body>
     {% include 'header.njk' %}
     <main>
+        <div class="max-w-5xl mx-auto px-6">
         {{ content | safe }}
+        </div>
     </main>
     {% include 'footer.njk' %}
 </body>
