--- a/src/index.njk
+++ b/src/index.njk
@@ -1,14 +1,14 @@
 ---
-title: example
+title: Portfolio
 layout: 'base.njk'
 ---
-<section class="py-32">
+<section class="py-16">
   <div class="grid grid-cols-1 md:grid-cols-2 gap-16 items-center">
     <div class="max-w-xl">
       <h1 class="text-5xl font-bold text-gray-900 leading-tight mb-6">
-        Hi, I’m Walker.<br />
+        Hello, I’m Walker.<br />
         <span class="text-red-600">
-          I build practical software.
+          I develop tools professionals need.
         </span>
       </h1>
 
@@ -16,13 +16,13 @@ layout: 'base.njk'
         I’m a developer based in Charleston focused on building tools that automate workflows and simplify complex systems.
       </p>
 
-      <p class="text-gray-600 mb-6">
-        I hold a Bachelor’s degree in Computer Science from Georgia Southern University and currently work at Mediterranean Shipping Company, where I build internal tools and automation that improve operational efficiency.
+      <p class="text-lg text-gray-600 mb-6">
+        I hold a Bachelor’s degree in Computer Science from Georgia Southern University and currently work at Mediterranean Shipping Company, where I build internal tools and automation.
       </p>
 
-      <p class="text-gray-600">
-        I enjoy working on well-scoped problems, clean systems, and software that makes people’s jobs easier.
-      </p>
+      <p class="text-lg text-gray-600 mb-6">
+        Working in a global organization has given me experience collaborating with teams across multiple regions, with a focus on delivering well engineered solutions that bring measurable improvements to complex systems, particularly in ocean freight and logistics.
+    </p>
     </div>
 
     <div class="flex justify-center">
@@ -37,15 +37,13 @@ layout: 'base.njk'
 
     
 <section class="py-32 bg-gray-100 border-t border-gray-300">
-  <div class="max-w-6xl mx-auto px-6">
+  <div class="max-w-6xl mx-auto px-4">
     <!-- Section header -->
     <div class="text-center mb-20">
       <h2 class="text-4xl font-extrabold text-gray-900 mb-4">
         Featured Projects
       </h2>
-      <p class="text-gray-600 text-lg max-w-2xl mx-auto">
-        A small selection of projects where I focused on practical software, clean architecture, and tools that make workflows more efficient.
-      </p>
+
     </div>
 
     <!-- Projects List -->
@@ -61,7 +59,7 @@ layout: 'base.njk'
     <div class="mt-20 text-center">
       <a
         href="/Projects"
-        class="inline-block px-6 py-3 bg-blue-600 text-white font-semibold rounded-lg shadow hover:bg-blue-700 transition"
+        class="inline-block px-6 py-3 bg-red-600 text-white font-semibold rounded-lg shadow hover:bg-red-700 transition"
       >
         View All Projects →
       </a>
