--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -14,6 +14,7 @@
         Home
       </a>
        <a href="/projects" class="hover:text-gray-900 transition">Projects</a>
+        <a href="/contact" class="hover:text-gray-900 transition">Contact</a>
       
     </nav>
   </div>
