fixed my build command. Moved my project summary page location in my file structure to fix nginx routing issue in deployment

--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -13,7 +13,7 @@
       >
         Home
       </a>
-       <a href="/projects" class="hover:text-gray-900 transition">Projects</a>
+       <a href="/myProjects" class="hover:text-gray-900 transition">Projects</a>
         <a href="/contact" class="hover:text-gray-900 transition">Contact</a>
       
     </nav>
